2020-05-29     1. Add tty change function.     2. Add restart mmi/node function. 2020-06-01     1. Fix bug that no platform insert if validate from conf is null.     2. Adjust parameter for muti visit to database, add a loop to update database.     3. Collapse platform page.     4. Display a interval timer for restart node.     5. Prompt more info for display page.     6. Only start/stop node, no mmi more.     7. Add Restarting flag for node.     8. Optimise the logic to update a node.

--- a/static/css/general.css
+++ b/static/css/general.css
@@ -134,7 +134,7 @@
         background: #efefef;
         overflow-y:scroll;
         overflow-x: hidden;
-        width:220px;
+        width:270px;
         height:200px;
         padding: 2px;
     }
@@ -146,15 +146,15 @@
         color: #1a1a1a;
         padding: 2px;
         height: 24px;
-        width: 195px;
+        width: 245px;
     }
 
-    .tty_info[conflict="Y"] {
+    .node_info[conflict="Y"] {
         background: #dd0055;
         color: yellow;
     }
 
-    .tty_info[active="True"] {
+    .tty_text[active="True"] {
         background: #00ff00;
     }
 
@@ -178,6 +178,16 @@
         float:left;
     }
 
+    .restart_btn {
+        margin:1px;
+        border:solid 2px #034c50;
+        border-radius: 5px;
+        padding: 1px;
+        background: #00a8e6;
+        width: 48px;
+        height: 20px;
+        float:left;
+    }
     .node_text {
         /*width: 100%;*/
         padding-left: 3px;
